# plaszczaki-git-chlopaki

./: .gitignore  CMakeLists.txt  CMakeListsOLD.txt  Makefile  Problem3.cpp  README.md  build.sh  config.txt  drogi.txt  gen.cpp  gen2.cpp  generator-v2.cpp  generator-v4.cpp  generator.cpp  kodowanykomp2.txt  kodowanyout.txt  koszt.txt  loremipsum.txt  out.txt  out2.txt  pary_tragarzy.txt  problem1-v2.cpp  problem1.cpp  problem2-v10.cpp  problem2-v3.cpp  problem2-v7.cpp  problem2-v8.cpp  problem2-v9.cpp  problem3.cpp  punkty.txt  punkty_otoczka_wypukla.txt  result.txt  slownik.txt  tekstbezpoli.txt  tekstzpoli.txt  text.txt  text2.txt  text3.txt  tragarze.txt  wysw.cpp  (+8 more)
Generator/: generator-v4.cpp
Problem 1/: helpers.cpp  helpers.h  problem1-v2.cpp
Problem 2/: huffman.cpp  huffman.h  problem2-v10.cpp
Problem 3/: problem3.cpp
czy pkt należy do odcinka lub wielokąta wypukłego/: punkty.py  wielwyp.py  wielwyp2.py
files/: config.txt  dict.txt  drogi.txt  hull.txt  kodowanykomp2.txt  kodowanyout.txt  koszt.txt  out.txt  pary_tragarzy.txt  porters.txt  pts.txt  result.txt  roads.txt  tekstbezpoli.txt  tekstzpoli.txt  text.txt  text2.txt  text3.txt  tragarze.txt
inputs/: punkty_otoczka_wypukla.txt
outputs/: pts.txt
src/: a.out  functions.cpp  functions.h  generator-v4.cpp  generator.cpp  helpers.cpp  helpers.h  huffman.cpp  huffman.h  loremipsum.txt  main.cpp  problem1-v2.cpp  problem1.cpp  problem2-v10.cpp  problem2.cpp  problem3.cpp
src/generator/: generator.cpp
src/problem1/: problem1.cpp
src/problem2/: problem2.cpp
src/problem3/: problem3.cpp
